--- a/datatags-app/app/views/index.scala.html
+++ b/datatags-app/app/views/index.scala.html
@@ -21,7 +21,7 @@
       <div class="col-md-12">
         <h1>PolicyModels<sup><small>working title</small></sup></h1>
         <p>
-          <div class="pull-right">
+          <div class="float-right">
             <a href="@startTaggingUrl" class="btn btn-primary btn-lg">View Models</a>
           </div>
           Policy Models (formerly: DataTags)
@@ -82,11 +82,11 @@
       </p>
       <div class="row">
         <div class="col-md-12">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title">Risk Levels and Associated Tags</h3>
+          <div class="card">
+            <div class="card-header">
+              <h3 class="card-title">Risk Levels and Associated Tags</h3>
             </div>
-            <div class="panel-body">
+            <div class="card-body">
               These tags denote the minimum handling requirements based on the risks associated with a dataset.
               <small>Hover/touch tags for explanation</small>
             </div>
