--- a/datatags-app/app/views/backoffice/customization.scala.html
+++ b/datatags-app/app/views/backoffice/customization.scala.html
@@ -26,7 +26,7 @@
 <div class="row">
   <div class="col-md-12">
     <h1>
-      <div class="pull-right"><button onclick="save()" class="btn btn-large btn-primary"><i class="fa fa-save"></i> Save</button></div>
+      <div class="float-right"><button onclick="save()" class="btn btn-large btn-primary"><i class="fa fa-save"></i> Save</button></div>
       Server Customization
     </h1>
     <h3>Front Page Text</h3>
