--- a/datatags-app/app/views/backoffice/policyModelVersionEditor.scala.html
+++ b/datatags-app/app/views/backoffice/policyModelVersionEditor.scala.html
@@ -11,16 +11,16 @@
   <div class="row">
     <div class="col-md-12">
       <h3>Policy Model Version Editor</h3>
-      <div class="help-block">
+      <div class="form-text text-muted">
         Use this page to @if(versionNumber.isDefined){edit}else{create} a single version of policy model.
       </div>
     </div>
   </div>
   <div class="row">
     <div class="col-md-12">
-      <form class="form-horizontal" enctype="multipart/form-data" action="@versionNumber.map(n=>routes.PolicyKitManagementCtrl.doSaveVersion(modelId, n)).getOrElse(routes.PolicyKitManagementCtrl.doSaveNewVersion(modelId))" method="POST">
+      <form enctype="multipart/form-data" action="@versionNumber.map(n=>routes.PolicyKitManagementCtrl.doSaveVersion(modelId, n)).getOrElse(routes.PolicyKitManagementCtrl.doSaveNewVersion(modelId))" method="POST">
         <div class="form-group">
-          <label for="publicationStatusSelect" class="col-sm-2 control-label">Who can view</label>
+          <label for="publicationStatusSelect" class="col-sm-2 col-form-label">Who can view</label>
           <div class="col-sm-10">
             <select class="form-control" name="publicationStatus" id="publicationStatusSelect">
               @for( v <- PublicationStatus.values ){
@@ -34,7 +34,7 @@
         </div>
 
         <div class="form-group">
-          <label for="commentingStatusSelect" class="col-sm-2 control-label">Who can comment</label>
+          <label for="commentingStatusSelect" class="col-sm-2 col-form-label">Who can comment</label>
           <div class="col-sm-10">
             <select class="form-control" name="commentingStatus" id="commentingStatusSelect">
             @for( v <- CommentingStatus.values ){
@@ -48,7 +48,7 @@
         </div>
 
         <div class="form-group">
-          <label for="zippedModel" class="col-sm-2 control-label">File</label>
+          <label for="zippedModel" class="col-sm-2 col-form-label">File</label>
           <div class="col-sm-10">
             <input type="file" name="zippedModel" id="zippedModel">
             <span class="helper-block">
@@ -58,7 +58,7 @@
         </div>
 
         <div class="form-group">
-          <label for="noteInput" class="col-sm-2 control-label">Note</label>
+          <label for="noteInput" class="col-sm-2 col-form-label">Note</label>
           <div class="col-sm-10">
             <textarea id="noteInput" name="note" class="form-control" rows="5">@form("note").value.getOrElse("")</textarea>
           </div>
@@ -67,7 +67,7 @@
         <div class="form-group">
           <div class="col-md-12 text-right">
             <hr>
-            <a href="@routes.PolicyKitManagementCtrl.showVpmPage(modelId)" class="btn btn-default">Cancel</a>
+            <a href="@routes.PolicyKitManagementCtrl.showVpmPage(modelId)" class="btn btn-secondary">Cancel</a>
             <button type="submit" class="btn btn-primary">Save</button>
           </div>
         </div>
