--- a/datatags-app/app/views/backoffice/users/forgotPassword.scala.html
+++ b/datatags-app/app/views/backoffice/users/forgotPassword.scala.html
@@ -17,16 +17,16 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-8 col-md-offset-2">
-        <form class="form-horizontal" action="@routes.UsersCtrl.doForgotPassword" method="POST">
+    <div class="col-md-8 offset-2">
+        <form action="@routes.UsersCtrl.doForgotPassword" method="POST">
             @for( m <- message ){
-                <div class="form-group has-error">
+                <div class="form-group has-danger">
                     <div class="alert alert-danger">@m</div>
                 </div>
             }
 
             <div class="form-group">
-                <label for="emailInput" class="col-sm-2 control-label">Email</label>
+                <label for="emailInput" class="col-sm-2 col-form-label">Email</label>
                 <div class="col-sm-10">
                     <input type="email" class="form-control" id="emailInput" name="email" value="@email.getOrElse("")" placeholder="Email">
                 </div>
@@ -35,7 +35,7 @@
             <div class="form-group">
                 <div class="col-md-8">
                     <div class="text-right">
-                        <a class="btn btn-default" href="/">Cancel</a>
+                        <a class="btn btn-secondary" href="/">Cancel</a>
                         <button type="submit" class="btn btn-primary"><i class="fa fa-send"></i> Send</button>
                     </div>
                 </div>
