--- a/datatags-app/app/views/backoffice/users/login.scala.html
+++ b/datatags-app/app/views/backoffice/users/login.scala.html
@@ -21,22 +21,22 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-8 col-md-offset-2">
-      <form class="form-horizontal" action="@routes.UsersCtrl.doLogin" method="POST">
+    <div class="col-md-8 offset-2">
+      <form action="@routes.UsersCtrl.doLogin" method="POST">
         @for( m <- message ){
-          <div class="form-group has-error">
+          <div class="form-group has-danger">
             <div class="alert alert-danger">@m</div>
           </div>
         }
         <div class="form-group">
-          <label for="idInput" class="col-sm-2 control-label">Username</label>
+          <label for="idInput" class="col-sm-2 col-form-label">Username</label>
           <div class="col-sm-10">
             <input type="text" class="form-control" id="usernameInput" name="username" value="@username.getOrElse("")" placeholder="username">
           </div>
         </div>
 
         <div class="form-group">
-          <label for="passwordInput" class="col-sm-2 control-label">Password</label>
+          <label for="passwordInput" class="col-sm-2 col-form-label">Password</label>
           <div class="col-sm-10">
             <input type="password" class="form-control" id="passwordInput" name="password" value="" placeholder="password">
           </div>
@@ -48,7 +48,7 @@
           </div>
           <div class="col-md-8">
             <div class="text-right">
-              <a class="btn btn-default" href="/">Cancel</a>
+              <a class="btn btn-secondary" href="/">Cancel</a>
               <button type="submit" class="btn btn-primary"><i class="fa fa-sign-in"></i> Log In</button>
             </div>
           </div>
