--- a/datatags-app/app/views/backoffice/users/reset.scala.html
+++ b/datatags-app/app/views/backoffice/users/reset.scala.html
@@ -16,21 +16,21 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-            <form class="form-horizontal" action="@routes.UsersCtrl.doResetPassword()" method="POST">
+            <form action="@routes.UsersCtrl.doResetPassword()" method="POST">
                 @for( m <- message ){
-                    <div class="form-group has-error">
+                    <div class="form-group has-danger">
                         <div class="alert alert-danger">@m</div>
                     </div>
                 }
                 <div class="form-group">
-                    <label for="password1Input" class="col-sm-2 control-label">New Password</label>
+                    <label for="password1Input" class="col-sm-2 col-form-label">New Password</label>
                     <div class="col-sm-10">
                         <input type="password" class="form-control" id="password1Input" name="password1" value=""
                         placeholder="Password">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="password2Input" class="col-sm-2 control-label">New Password (again)</label>
+                    <label for="password2Input" class="col-sm-2 col-form-label">New Password (again)</label>
                     <div class="col-sm-10">
                         <input type="password" class="form-control" id="password2Input" name="password2" value=""
                         placeholder="Password">
@@ -40,7 +40,7 @@
                 <div class="form-group">
                     <div class="col-md-8">
                         <div class="text-right">
-                            <a class="btn btn-default" href="/">Cancel</a>
+                            <a class="btn btn-secondary" href="/">Cancel</a>
                             <button type="submit" class="btn btn-primary"><i class="fa fa-send"></i> change</button>
                         </div>
                     </div>
