--- a/datatags-app/app/views/backoffice/versionedPolicyModelList.scala.html
+++ b/datatags-app/app/views/backoffice/versionedPolicyModelList.scala.html
@@ -4,8 +4,8 @@
   <div class="row">
     <div class="col-md-12">
       <h1>
-        <div class="pull-right">
-          <a href="@routes.PolicyKitManagementCtrl.showNewVpmPage()" class="btn btn-large btn-default"><i class="fa fa-plus-circle"></i> Add</a>
+        <div class="float-right">
+          <a href="@routes.PolicyKitManagementCtrl.showNewVpmPage()" class="btn btn-large btn-secondary"><i class="fa fa-plus-circle"></i> Add</a>
         </div>
         Versioned Policy Models</h1>
     </div>
