--- a/datatags-app/app/views/comps/comments.scala.html
+++ b/datatags-app/app/views/comps/comments.scala.html
@@ -16,7 +16,7 @@
       <textarea class="form-control" placeholder="Comment text" rows="4" cols="20" data-role="comment"></textarea>
     </div>
     <div class="buttonBar">
-        <button class="btn btn-default btn-sm" type="button" onclick="Comments.closeForm('@formID')">Cancel</button>
+        <button class="btn btn-secondary btn-sm" type="button" onclick="Comments.closeForm('@formID')">Cancel</button>
         <button class="btn btn-primary btn-sm" type="button" onclick="Comments.save('@formID')">Comment</button>
     </div>
   </div>
