--- a/datatags-app/app/views/comps/inviteUser.scala.html
+++ b/datatags-app/app/views/comps/inviteUser.scala.html
@@ -16,12 +16,12 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-            <form class="form-horizontal" action="@routes.UsersCtrl.doInviteUser" method="POST">
+        <div class="col-md-8 offset-2">
+            <form action="@routes.UsersCtrl.doInviteUser" method="POST">
 
 
                 <div class="form-group">
-                    <label for="emailInput" class="col-sm-2 control-label">Email</label>
+                    <label for="emailInput" class="col-sm-2 col-form-label">Email</label>
                     <div class="col-sm-10">
                         <input type="email" class="form-control" id="emailInput" name="email" value="" placeholder="Email">
                     </div>
@@ -30,7 +30,7 @@
                 <div class="form-group">
                     <div class="col-md-8">
                         <div class="text-right">
-                            <a class="btn btn-default" href="/admin/">Cancel</a>
+                            <a class="btn btn-secondary" href="/admin/">Cancel</a>
                             <button type="submit" class="btn btn-primary"><i class="fa fa-send"></i> Send</button>
                         </div>
                     </div>
