--- a/datatags-app/app/views/comps/questionPanel.scala.html
+++ b/datatags-app/app/views/comps/questionPanel.scala.html
@@ -2,17 +2,17 @@
 @import edu.harvard.iq.datatags.model.graphs.nodes.AskNode
 @(questionNode:AskNode, pmvKit:PolicyModelVersionKit, loc:Option[Localization],
         answerHistory:Seq[AnswerRecord], enableComments:Boolean, interactive:Boolean)
-<div class="panel panel-primary">
-  <div class="panel-heading">
-    <h3 class="panel-title clearfix">
+<div class="card">
+  <div class="card-header">
+    <h3 class="card-title clearfix">
       @if( enableComments ) {
-        <div class="pull-right">
+        <div class="float-right">
         @comps.comments("cmnt", pmvKit.dbData.parentId, pmvKit.dbData.version, None, "node", questionNode.getId)
         </div>}
       Question: Please select one answer
     </h3>
   </div>
-  <div class="panel-body">
+  <div class="card-body">
     @defining( loc.map(l=>l.getNodeText(questionNode.getId)).getOrElse(java.util.Optional.empty) ){ nodeTextOpt =>
       @if( nodeTextOpt.isPresent ) {
         @Helpers.renderMarkdown( nodeTextOpt.get )
@@ -32,10 +32,10 @@
       }
     }
   </div>
-  <div class="panel-footer">
+  <div class="card-footer">
   @helper.form( action=routes.InterviewCtrl.answer(pmvKit.id.modelId, pmvKit.id.version, questionNode.getId), 'id->"answerForm" ) {
     @for( ans <- questionNode.getAnswers ) {
-      <button type="button" class="btn btn-default" @if(interactive){
+      <button type="button" class="btn btn-secondary" @if(interactive){
       onclick="$('#answerText')[0].value='@ans.getAnswerText'; $('#answerForm').submit();"}else{disabled} >
       @loc.map( l=>l.localizeAnswer(ans.getAnswerText)).getOrElse(Helpers.makeUpper(ans.getAnswerText))</button>
     }
