--- a/datatags-app/app/views/interview/intro.scala.html
+++ b/datatags-app/app/views/interview/intro.scala.html
@@ -5,7 +5,7 @@
 }
 @templates.bsNavBar("Interview Start Page", 'tag, scripts) {
   <div class="row">
-    <div class="col-md-8 col-md-offset-2">
+    <div class="col-md-8 offset-2">
       <a href="@routes.Application.showVersionedPolicyModel(qKit.id.modelId)"><i class="fa fa-list"></i> Model Versions</a>
       <h3>
         @qKit.model.getMetadata.getTitle
@@ -17,7 +17,7 @@
   </div>
   @for( iwm <- interviewWelcomeMessage ) {
     <div class="row">
-      <div class="col-md-8 col-md-offset-2">
+      <div class="col-md-8 offset-2">
         <div class="requestedInterview-welcomeMessage">
           @iwm
         </div>
@@ -25,12 +25,12 @@
     </div>
   }
   <div class="row">
-    <div class="col-md-8 col-md-offset-2">
+    <div class="col-md-8 offset-2">
       @if( qKit.canRun ) {
         <div class="well well-lg">
           <div class="text-center">
             <div class="row">
-              <div class="col-xs--12">
+              <div class="col-12">
 
                 @if( qKit.model.getLocalizations.size>2 ) {
                   <ul class="localizations">
@@ -113,7 +113,7 @@
 
       <h3>
         @if( qKit.dbData.commentingStatus != CommentingStatus.Closed ) {
-        <div class="pull-right">
+        <div class="float-right">
           @comps.comments("cmnt", qKit.dbData.parentId, qKit.dbData.version, None, "meta", "policy-space")
         </div>}
         Policy Space
