--- a/datatags-app/app/views/templates/bsNavBar.scala.html
+++ b/datatags-app/app/views/templates/bsNavBar.scala.html
@@ -6,43 +6,27 @@
 }
 
 @bsBase(title, scripts, headPart) {
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="/">
-        @*<img src="@routes.Assets.at("images/DataTags-Logo-mid.png")" alt="DataTags logo"/>*@
-        PolicyModels
-      </a>
-    </div>
+<nav class="navbar navbar-expand-lg navbar-light fixed-top bg-light">
+  <a class="navbar-brand" href="/">PolicyModels</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="navbar-collapse">
+  <div class="collapse navbar-collapse" id="navbar-collapse">
+    <ul class="nav navbar-nav ml-auto">
+      <li class="nav-item">
+      @if(Helpers.userPresent(req)) {
+        <a class="nav-link" data-toggle="tooltip" data-placement="bottom" title="User Home" href="@routes.BackendCtrl.index"><i class="fa fa-cogs"></i></a></li>
+      } else {
+      <a class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Log in to manage" href="@routes.UsersCtrl.showLogin"><i class="fa fa-sign-in"></i></a>
+    }
+      </li>
+      <li class="nav-item"><a class="nav-link" data-toggle="tooltip" data-placement="bottom" href="http://datatags.org" target="_blank" title="Project's home"><i class="fa fa-home"></i></a></li>
+      <li class="nav-item"><a class="nav-link" data-toggle="tooltip" data-placement="bottom" href="https://github.com/IQSS/DataTags/" title="We're open source! Visit us at GitHub" target="_blank"><i class="fa fa-github-alt"></i></a></li>
+      <li class="nav-item"><a data-toggle="tooltip" data-placement="bottom" href="http://iq.harvard.edu" title="Institute of Quantitative Social Science" target="_blank">IQSS</a></li>
+    </ul>
+  </div>
 
-      @*
-      <ul class="nav navbar-nav">
-      </ul>
-      *@
-      
-      <ul class="nav navbar-nav navbar-right">
-        <li>
-          @if(Helpers.userPresent(req)) {
-            <a data-toggle="tooltip" data-placement="bottom" title="User Home" href="@routes.BackendCtrl.index"><i class="fa fa-cogs"></i></a></li>
-          } else {
-            <a data-toggle="tooltip" data-placement="bottom" title="Log in to manage" href="@routes.UsersCtrl.showLogin"><i class="fa fa-sign-in"></i></a>
-          }
-        </li>
-        <li><a data-toggle="tooltip" data-placement="bottom" href="http://datatags.org" target="_blank" title="Project's home"><i class="fa fa-home"></i></a></li>
-        <li><a data-toggle="tooltip" data-placement="bottom" href="https://github.com/IQSS/DataTags/" title="We're open source! Visit us at GitHub" target="_blank"><i class="fa fa-github-alt"></i></a></li>
-        <li><a data-toggle="tooltip" data-placement="bottom" href="http://iq.harvard.edu" title="Institute of Quantitative Social Science" target="_blank">IQSS</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
 </nav>
 } {
 	@content
